--- a/src/iodaLinux-5.4.121/Makefile
+++ b/src/iodaLinux-5.4.121/Makefile
@@ -2,7 +2,7 @@
 VERSION = 5
 PATCHLEVEL = 4
 SUBLEVEL = 121
-EXTRAVERSION =
+EXTRAVERSION = ScalaRAID
 NAME = Kleptomaniac Octopus
 
 # *DOCUMENTATION*
