去除 IODA 内核中的统计信息以及无用代码

--- a/src/iodaLinux-5.4.121/Makefile
+++ b/src/iodaLinux-5.4.121/Makefile
@@ -2,7 +2,7 @@
 VERSION = 5
 PATCHLEVEL = 4
 SUBLEVEL = 121
-EXTRAVERSION = -IODA
+EXTRAVERSION = -IODA-remove-stat
 NAME = Kleptomaniac Octopus
 
 # *DOCUMENTATION*
